// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ComponentTabs when there are no state types renders the component with all tabs 1`] = `
"<div class=\\"my-3\\"><a href=\\"/components/test-component-id-1\\" target=\\"_self\\" class=\\"btn my-1 btn-secondary\\">Info</a> <a href=\\"/components/test-component-id-1/dependencies\\" target=\\"_self\\" class=\\"btn my-1 btn-secondary\\">
    Visualizations
  </a> <a href=\\"/components/test-component-id-1/response-times\\" target=\\"_self\\" class=\\"btn my-1 btn-secondary\\">
    Response Times
  </a> <a href=\\"/components/test-component-id-1/downstream-response-times\\" target=\\"_self\\" class=\\"btn my-1 btn-secondary\\">
    Downstream Response Times
  </a> <a href=\\"/components/test-component-id-1/call-graphs\\" target=\\"_self\\" class=\\"btn my-1 btn-secondary\\">
    Call Graphs
  </a> <a href=\\"/components/test-component-id-1/cross-functional-requirements\\" target=\\"_self\\" class=\\"btn my-1 btn-secondary\\">
    Cross Functional Requirements
  </a> <a href=\\"/components/test-component-id-1/tech-debts\\" target=\\"_self\\" class=\\"btn my-1 btn-secondary\\">
    Tech Debts
  </a> <a href=\\"/components/test-component-id-1/errors\\" target=\\"_self\\" class=\\"btn my-1 btn-secondary\\">Errors</a>
  <!---->
  <!---->
  <!---->
  <!---->
  <!----> <a href=\\"/components/test-component-id-1/lines-of-code\\" target=\\"_self\\" class=\\"btn my-1 btn-secondary\\">
    Lines of Code
  </a>
  <!---->
  <!---->
  <!----> <a href=\\"/components/test-component-id-1/tests\\" target=\\"_self\\" class=\\"btn my-1 btn-secondary\\">Tests</a></div>"
`;

exports[`ComponentTabs when there are no state types renders the component with less tabs 1`] = `
"<div class=\\"my-3\\"><a href=\\"/components/test-component-id-1\\" target=\\"_self\\" class=\\"btn my-1 btn-secondary\\">Info</a> <a href=\\"/components/test-component-id-1/dependencies\\" target=\\"_self\\" class=\\"btn my-1 btn-secondary\\">
    Visualizations
  </a> <a href=\\"/components/test-component-id-1/response-times\\" target=\\"_self\\" class=\\"btn my-1 btn-secondary\\">
    Response Times
  </a> <a href=\\"/components/test-component-id-1/downstream-response-times\\" target=\\"_self\\" class=\\"btn my-1 btn-secondary\\">
    Downstream Response Times
  </a> <a href=\\"/components/test-component-id-1/call-graphs\\" target=\\"_self\\" class=\\"btn my-1 btn-secondary\\">
    Call Graphs
  </a> <a href=\\"/components/test-component-id-1/cross-functional-requirements\\" target=\\"_self\\" class=\\"btn my-1 btn-secondary\\">
    Cross Functional Requirements
  </a> <a href=\\"/components/test-component-id-1/tech-debts\\" target=\\"_self\\" class=\\"btn my-1 btn-secondary\\">
    Tech Debts
  </a> <a href=\\"/components/test-component-id-1/errors\\" target=\\"_self\\" class=\\"btn my-1 btn-secondary\\">Errors</a>
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
  <!----> <a href=\\"/components/test-component-id-1/tests\\" target=\\"_self\\" class=\\"btn my-1 btn-secondary\\">Tests</a></div>"
`;
